fix: element overflow in category page

--- a/src/styles/components/_itemContainer.scss
+++ b/src/styles/components/_itemContainer.scss
@@ -2,14 +2,21 @@
 @use "../utils/mixin";
 @use "../abstracts/breakpoints";
 
+.section {
+  display: grid;
+  grid-template-columns: minmax(1rem, 1fr) minmax(0, 75%) minmax(1rem, 1fr);
+
+  & > * {
+    grid-column: 2;
+  }
+}
+
 .items-container {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  margin-inline: auto;
-  max-width: map-get(breakpoints.$breakpoints, $key: exLarge);
 }
 
 .single-item {
