--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,6 @@
 .home-section {
   display: grid;
-  grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(0, 30%)) minmax(
+  grid-template-columns: minmax(1rem, 1fr) repeat(3, minmax(0, 25%)) minmax(
       1rem,
       1fr
     );
